# backend

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  main.py  models.py  pyproject.toml  requirements.txt  schemas.py  test_main.py
.github/ISSUE_TEMPLATE/: historia-de-usuario.md
.github/workflows/: python-app.yml
src/: auth.py  crud.py  database.py  mail.py  main.py  models.py  schemas.py  test_main.py
